Import of DERHAAG/FramesReady-1.017 from CPAN.
gitpan-cpan-distribution: FramesReady
gitpan-cpan-version:      1.017
gitpan-cpan-path:         DERHAAG/FramesReady-1.017.tar.gz
gitpan-cpan-author:       DERHAAG
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,17 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         FramesReady
-version:      1.016
-version_from: lib/LWP/UserAgent/FramesReady.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                FramesReady
+version:             1.001
+abstract:            ~
+license:             ~
+author:              ~
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     Digest::MD5:                   0
     HTML::HeadParser:              0
     MIME::Base64:                  2.1
     Net::FTP:                      2.58
     URI:                           1.10
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
