--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                FramesReady
-version:             1.001
+version:             1.018
 abstract:            ~
 license:             ~
 author:              ~
@@ -8,9 +8,14 @@ generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
     Digest::MD5:                   0
+    HTML::Form:                    0
     HTML::HeadParser:              0
+    HTTP::Daemon:                  0
+    LWP::Debug:                    0
+    LWP::UserAgent:                0
     MIME::Base64:                  2.1
     Net::FTP:                      2.58
+    Net::HTTP:                     0
     URI:                           1.10
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
