--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,30 @@
 --- #YAML:1.0
-name:                FramesReady
-version:             1.020
-abstract:            ~
-license:             ~
-author:              ~
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Digest::MD5:                   0
-    HTML::Form:                    0
-    HTML::HeadParser:              0
-    HTTP::Daemon:                  0
-    LWP::UserAgent:                0
-    MIME::Base64:                  2.1
-    Net::FTP:                      2.58
-    Net::HTTP:                     0
-    URI:                           1.10
+name:               FramesReady
+version:            1.021
+abstract:           ~
+author:  []
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Digest::MD5:       0
+    HTML::Form:        0
+    HTML::HeadParser:  0
+    HTTP::Daemon:      0
+    LWP::UserAgent:    0
+    MIME::Base64:      2.1
+    Net::FTP:          2.58
+    Net::HTTP:         0
+    Test::Harness:     3.21
+    URI:               1.10
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.52
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
